--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
