--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.5",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.6.0",
     "expo-storage": "^48.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
-    "react-native-webview": "13.2.2",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
