--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "crypto-js": "^4.1.1",
     "expo": "~49.0.5",
     "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.6.0",
@@ -17,7 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
