--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "crypto-js": "^4.1.1",
     "expo": "~49.0.5",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-storage": "^48.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
-    "react-native-webview": "13.2.2",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
