--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-webview": "13.2.2"
   },
   "devDependencies": {
