--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.alexlam1822.webbrowser"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -28,6 +29,11 @@
     "permissions": [
       "WEB_BROWSE",
       "APP_SLEEP"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "31436d07-63ce-4eb3-9a1a-606943228f8b"
+      }
+    }
   }
 }
