--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@expo/config-plugins": "~7.2.2",
+    "@expo/prebuild-config": "~6.2.4",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "crypto-js": "^4.1.1",
     "expo": "~49.0.5",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-storage": "^48.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
     "react-native-get-random-values": "^1.9.0",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "expo-file-system": "~15.4.3",
+    "expo-secure-store": "~12.3.1",
+    "uuid":"^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "overrides": {
+    "expo-modules-autolinking": "~1.5.0"
   },
   "private": true
 }
