--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,18 +13,16 @@
     "@expo/prebuild-config": "~6.2.4",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "crypto-js": "^4.1.1",
     "expo": "~49.0.5",
+    "expo-file-system": "~15.4.3",
+    "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
-    "react-native-get-random-values": "^1.9.0",
     "react-native-webview": "13.2.2",
-    "expo-file-system": "~15.4.3",
-    "expo-secure-store": "~12.3.1",
-    "uuid":"^7.0.0"
+    "expo-crypto": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
